--- a/src/app/hacer-pedido/order-confirmation/order-confirmation.component.html
+++ b/src/app/hacer-pedido/order-confirmation/order-confirmation.component.html
@@ -25,6 +25,10 @@
             <h1><strong>Envío Express:</strong></h1>
             <p>{{ order.express_shipping ? 'Sí' : 'No' }}</p>
           </div>
+          <div class="order-item">
+            <h1><strong>Precio:</strong></h1>
+            <p>{{ price }} soles</p>
+          </div>
           <!-- <div class="order-item">
             <p><strong>Instrucciones:</strong></p>
             <p>{{ instrucciones }}</p>
