--- a/src/app/hacer-pedido/create-order/create-order.component.css
+++ b/src/app/hacer-pedido/create-order/create-order.component.css
@@ -13,7 +13,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 1440px;
+    /* width: 1440px; */
     background-color: #F6A13C;
     padding: 20px;
     border-radius: 8px;
@@ -146,4 +146,54 @@ body {
   .Derecha img{
     width: 400px;
     align-self: center;
+  }
+
+  .button-Mapa-Interactivo {
+    position: relative;
+}
+
+.tooltip-text {
+    visibility: hidden;
+    width: 300px;
+    height: 30px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%; /* Adjust this value to position the tooltip above the button */
+    left: 50%;
+    margin-left: -60px; /* Use half of the width value to center the tooltip */
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.tooltip-text::after {
+    content: "";
+    text-align: center;
+    position: absolute;
+    top: 100%; /* At the bottom of the tooltip */
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+}
+
+.button-Mapa-Interactivo:hover .tooltip-text {
+    visibility: visible;
+    opacity: 1;
+}
+
+.Precio {
+    margin-top: 0px;
+    height: 50px;
+    align-self: flex-end;
+    color: #FFF9F2;
+  }
+  .Precio h3{
+    font-weight: bolder;
+    font-size: 32px;
   }
