feat: se añadieron constraints visuales para guiar al usuario al crear su orden

--- a/src/app/hacer-pedido/create-order/create-order.component.css
+++ b/src/app/hacer-pedido/create-order/create-order.component.css
@@ -197,3 +197,10 @@ body {
     font-weight: bolder;
     font-size: 32px;
   }
+
+  .error-message {
+    color: red;
+    font-size: 14px;
+    margin-top: 5px;
+  }
+  
