--- a/src/app/historial-de-pedidos/filtrar-pedidos/filtrar-pedidos.component.html
+++ b/src/app/historial-de-pedidos/filtrar-pedidos/filtrar-pedidos.component.html
@@ -6,7 +6,7 @@
         <img src="..\assets\logo.PNG" class="logo">
     </div>
 <!--Texto Mensaje-->
-    
+
     <h1 class="mensaje-filtrar">Filtrar por:</h1>
     
 <!--Tipos de encomienda-->
@@ -14,22 +14,22 @@
         <!--Opcion1-->
         
         <div class="pedido-boton1">
-            <button  class="pedido-contenedor1"(click)="irFiltrarPorFecha()">
+            <button  class="pedido-contenedor1"(click)="sortAalaZ()">
                 
                 <img src="..\assets\calendario.png" class="pedido-img">
                 <div class="info-text-container">
-                    <h1 class="pedido-mensaje">Fecha del Envío</h1>
-                    <h1 class="desc-1">Puedes buscar tus envíos por orden de más recientes y más antiguos. También puedes buscar una fecha específica que tú decidas</h1>
+                    <h1 class="pedido-mensaje">Ordenar por nombre A-Z</h1>
+                    <h1 class="desc-1">Los ultimos envíos de la lista pasaran pasaran a ser los primeros y viceversa</h1>
                 </div>
             </button>
         </div>
         <!--Opcion2-->
         <div class="pedido-boton2">
-            <button class="pedido-contenedor2"  (click)="irFiltrarPorTipo()">
+            <button class="pedido-contenedor2"  (click)="sortInvertirLista()">
                 <img src="..\assets\package.png" class="pedido-img">
                 <div class="info-text-container">
-                    <h1 class="pedido-mensaje">Tipo de Encomienda </h1>
-                    <h1 class="desc-1">Puedes buscar tus envios por los diferentes tipos de encomienda. Encomienda de comida, encomienda regular o mudanza. </h1>
+                    <h1 class="pedido-mensaje">Invertir lista </h1>
+                    <h1 class="desc-1">Los ultimos envíos de la lista pasaran pasaran a ser los primeros y viceversa </h1>
                 </div>
             </button>
         </div>
@@ -41,5 +41,6 @@
             <h1 class="mensaje1">Una vez selecciones una de estas opciones, el orden se actualizará en la lista de envíos.</h1>
         </div>
     </div>
+ 
 </div>
 </body>
