--- a/src/app/historial-de-pedidos/detalles-del-envio/detalles-del-envio.component.css
+++ b/src/app/historial-de-pedidos/detalles-del-envio/detalles-del-envio.component.css
@@ -53,12 +53,13 @@
 .descripcion-text{
     color: black;
     font-size: 20px;
+    padding-top: 25px;
 }
 .localizacion-container{
     display: block;
     margin: auto;
     background-color:#FFF5F2;
-    height: 300px;
+    height: 325px;
     width: 600px;
     border-radius: 20px;
 }
