--- a/src/app/historial-de-pedidos/detalles-del-envio/detalles-del-envio.component.html
+++ b/src/app/historial-de-pedidos/detalles-del-envio/detalles-del-envio.component.html
@@ -1,39 +1,54 @@
 <body class="main-body">
     <div class="titulo-container">
         <h1 class="titulo">Detalles del envío</h1>
-        <div class="selec-imagen">
+        <div class="selec-imagen" *ngIf="(order && (order?.pickup_address != '') )">
+            <img src="..\assets\package.png" class="imagen">
+         </div>
+         <div class="selec-imagen" *ngIf="(order?.pickup_address == '')">
             <img src="..\assets\default.png" class="imagen">
-        </div>
+         </div>
+        
     </div>
     <!--Descripcionn y localizacion-->
     <div class="descripcion-localizacion-container">
          <!--Descripcionn-->
         <div class="descripcion-container"> 
-            <h2>Detalles Completos:</h2>
-            <div *ngIf="(order && (order?.pickup_address != '') )">
-                <p>Dirección de recogida: {{order.pickup_address}}</p>
-                <p>Dirección de llegada: {{order.shipping_address}}</p>
-                <p>Envío express: {{order.express_shipping ? 'Sí' : 'No'}}</p>
-                <p>Tipo Encomienda: {{order.tipo_encomienda}}</p>
-            </div>
-            <div *ngIf="(order?.pickup_address == '')">
-                 <p>Por favor seleccione un envío...</p>
-            </div>
+            <div class="descripcion-text">
+                  <h2>Detalles Completos:</h2>
+                 <div *ngIf="(order && (order?.pickup_address != '') )">
+                     
+                     <p>Envío express: {{order.express_shipping ? 'Sí' : 'No'}}</p>
+                     <p>Tipo Encomienda: {{order.tipo_encomienda}}</p>
+                     <p>Instrucciones: {{instrucciones}}</p>
+                  </div>
+                  <div *ngIf="(order?.pickup_address == '')">
+                      <p>Por favor seleccione un envío...</p>
+                  </div>
+             </div>
         </div>
         <!--Localizacion-->
         <div class="localizacion-container"> 
             <div class="direccion-recogida"> 
                 <h1 class="recogida-text">Dirección de recogida:</h1>
-                <h1 class="recogida-output">Por favor seleccione un envío...</h1>
+                <div *ngIf="(order && (order?.pickup_address != '') )">
+                    <h1 class="recogida-output"> {{order.pickup_address}}</h1>
+                 </div>
+                 <div *ngIf="(order?.pickup_address == '')">
+                    <h1 class="recogida-output">Por favor seleccione un envío...</h1>
+               </div>
+                
             </div>
             <div class="direccion-entrega" > 
                 <h1 class="entrega-text">Dirección de entrega:</h1>
-                <h1 class="entrega-output">Por favor seleccione un envío...</h1>
+                <div *ngIf="(order && (order?.pickup_address != '') )">
+                    <h1 class="recogida-output"> {{order.shipping_address}}</h1>
+                 </div>
+                 <div *ngIf="(order?.pickup_address == '')">
+                    <h1 class="recogida-output">Por favor seleccione un envío...</h1>
+                 </div>
             </div>
         </div>
-        <button (click)="getTheOrder()">
-            <p>actualizar</p>
-        </button>
+        
     </div>
    
 </body>
