--- a/src/app/historial-de-pedidos/historial-menu/historial-menu.component.html
+++ b/src/app/historial-de-pedidos/historial-menu/historial-menu.component.html
@@ -41,7 +41,16 @@
         </div>
         <!--Info-->
         <div class="pedido-boton">
-            <div class="pedido-contenedor">
+            
+
+            <div class="pedido-contenedor" *ngIf="(order && (order?.pickup_address != '') )">
+                <img src="..\assets\package.png" class="pedido-img">
+                <div class="info-text-container">
+                    <h1 class="pedido-mensaje"> {{order.shipping_address}}</h1>
+                    <h1 class="desc-1"> Tipo de Encomienda: {{order.tipo_encomienda }}</h1>
+                </div>
+            </div>
+            <div class="pedido-contenedor" *ngIf="(order?.shipping_address == '')">
                 <img src="..\assets\default.png" class="pedido-img">
                 <div class="info-text-container">
                     <h1 class="pedido-mensaje">Por favor seleccione un envío...</h1>
