seccion ver pedidos 100%

--- a/src/app/hacer-pedido/instrucciones-entrega/instrucciones-entrega.component.html
+++ b/src/app/hacer-pedido/instrucciones-entrega/instrucciones-entrega.component.html
@@ -10,7 +10,7 @@
   </div>
     <p>Ingrese cualquier indicación o requerimiento específico para la entrega</p>
     <div class="textarea-container">
-      <textarea [(ngModel)]="instrucciones" placeholder="Escribe tus instrucciones aquí..."></textarea>
+      <textarea [(ngModel)]="instrucciones" placeholder="Escribe tus instrucciones aquí... (Sera visible para todos los pedidos)"></textarea>
     </div>
     <div class="button-container">
       <button (click)="guardarInstrucciones()">Guardar</button>
