feat: se implemento la api en el historial de pedidos

--- a/src/app/menus/consumidor/consumidor.component.html
+++ b/src/app/menus/consumidor/consumidor.component.html
@@ -22,7 +22,7 @@
         <button mat-raised-button class="custom-button" (click)="newShipment()">
           <img src="../assets/agregar.png" alt="New Shipment"> <span>Haz un nuevo envío</span>
         </button>
-        <button mat-raised-button class="custom-button" (click)="activeShipments()">
+        <button mat-raised-button class="custom-button" (click)="shipmentRecord()">
           <img src="../assets/pedidos.png" alt="Active Orders"> <span>Envíos y pedidos activos</span>
         </button>
         <button mat-raised-button class="custom-button" (click)="shipmentRecord()">
