--- a/src/app/historial-de-pedidos/historial-menu/historial-menu.component.css
+++ b/src/app/historial-de-pedidos/historial-menu/historial-menu.component.css
@@ -12,6 +12,7 @@
     background-color: #F6A13C;
     display: block;
     width: 50%; 
+   
 }
 .titulo {
     text-align: center;
@@ -118,56 +119,83 @@
 }
 .pedido-boton{
     padding-top: 20px;
-    overflow: hidden;
+    
     margin: auto;
     width: 620px;
-    height: 380px;
+    height: 280px;
+    
 }
 .pedido-contenedor{
-    
-    display: inline-flex;
+    align-items: left;
+    display: flex;
     background-color: #FFD5A5;
     text-decoration: none;
     border-radius: 20px;
     width: 620px;
     height: 280px;
+   
+    margin: auto;
+    margin: auto;
     
 }
 .info-text-container{
     display: block;
+    margin: auto;
 }
 .pedido-mensaje{
     font-size: 30px;
-    color: #1E3A8A;
-    padding-top: 55px;
-    padding-left: 0px;
     width: 400px;
-    height: 50px;
+    color: #1E3A8A;
+    padding-top: 0px;
+    padding-left: 0px;
+    padding-bottom: 20px;
+    margin: auto;
     text-align: left;
     font-family: "Poppins", sans-serif;
     font-weight: bold;
-    line-height: 1.4;
+    line-height: 1.2;
     display: block;
     
+    
+}
+.timer{
+    
+    display: inline;
+    
+}
+.timer-image{
+    display: flex;
+    width: 15px;
+    height: 15px;
+    margin: left;
+    
+    align-self: left;
 }
 .desc-1{
+    line-height: 1;
     font-size: 15px;
-    color: #000000;
-    
     padding-bottom: 10px;
-    height: 10px;
+    color: #000000;
+    margin: auto;
     text-align: left;
     font-family: "Poppins", sans-serif;
     font-weight: bold;
     display: block;
     
+    
 }
-.pedido-img{
+.pedido-img {
     color: #000000;
     text-align: center;
-    width: 150px;
+    width: 170px;
     height: 150px;
-    margin: auto;
-    padding-left: 0px;
-    border-radius: 20px;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: 30px; /* Adjust margins as needed */
+    margin-right: 30px;
+    
+    border-radius: 10px;
+    overflow: hidden;
+    box-sizing: border-box; /* Include padding and border in element's total width and height */
+   
 }
